--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ font-family: 'Josefin Slab', serif;
 }
 
 body {
-
+background-color: #f3f3f3;
 }
 
 header {
@@ -20,14 +20,15 @@ header {
   width: 100%;
   text-align: center;
   font-size: 35px;
-  height: 130px;
+  height: 150px;
   padding-top: 15px;
   color: white;
+  position: relative;
   font-family: 'Josefin Slab';
 }
 
-/*header:after {
-  background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
+header::after {
+  background: linear-gradient(-45deg, #f3f3f3 16px, transparent 0), linear-gradient(45deg, #f3f3f3 16px, transparent 0);
   background-position: left-bottom;
   background-repeat: repeat-x;
   background-size: 33px 33px;
@@ -38,25 +39,51 @@ header {
   left: 0px;
   width: 100%;
   height: 32px;
-}*/
+}
 
 main {
   display: flex;
-
+  justify-content: center;
+  width: 100%;
+  height: 80%;
 
 }
 
-.basics {
+div.Basics {
+  width: 25%;
+  margin: 60px 0px 0px 70px;
+}
 
+ul {
+  list-style-type: none;
 }
 
 .story {
+  padding-left: 50px;
+  width: 33.33%;
+  margin: 20px;
+  border-left: 1px solid grey;
+}
 
+h2 {
+  margin-bottom: 30px;
+  font-size: 40px;
+}
+
+aside {
+  width: 20%;
+  justify-content: center;
+  margin-left: 50px;
+  margin-top: 60px;
 }
 
 
 
 img {
-  width: 100px;
+  width: 110px;
   border-radius: 100%
+}
+
+article.story {
+  margin: 60px 20px 20px 30px;
 }
